--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="/Users/tarzx/Documents/workspace/encog-core-3.2.0.jar"/>
 	<classpathentry kind="lib" path="/Users/tarzx/Documents/workspace/opencsv-2.3.jar"/>
+	<classpathentry kind="lib" path="/Users/tarzx/Dropbox/UStA/Java Library/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="/Users/tarzx/Dropbox/UStA/Java Library/jcommon-1.0.23.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
